Fardrimm: more maps, Koboldspawns, map changes

--- a/mod/area/ktunnel101.git.yml
+++ b/mod/area/ktunnel101.git.yml
@@ -9,6 +9,7 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 0}
     AmbientSndNight: {type: :int, value: 0}
     AmbientSndNitVol: {type: :int, value: 0}
+    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 0}
     MusicBattle: {type: :int, value: 0}
     MusicDay: {type: :int, value: 0}
@@ -24,8 +25,92 @@ Door List:
 
 Encounter List: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 305}
+        CR: {type: :float, value: 0.5}
+        ResRef: {type: :resref, value: koboldschtze}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 302}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: kobold}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: koboldkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 5.6372}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0455}
+        Y: {type: :float, value: 0.1357}
+        Z: {type: :float, value: 5.6414}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 4.0734}
+        Y: {type: :float, value: 0.0124}
+        Z: {type: :float, value: 5.525}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 4.1212}
+        Y: {type: :float, value: 1.1476}
+        Z: {type: :float, value: 5.5673}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0907}
+        Y: {type: :float, value: 1.2573}
+        Z: {type: :float, value: 5.6432}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Kobolde, sehr leicht
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 1}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 45.2381}
+        Y: {type: :float, value: 43.7188}
+        Z: {type: :float, value: 5.5461}
+    Tag: {type: :cexostr, value: Kobolt_leicht}
+    TemplateResRef: {type: :resref, value: kobolt_leicht}
+    XPosition: {type: :float, value: 42.8692}
+    YPosition: {type: :float, value: 2.7556}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
