--- a/mod/area/dr_quarters2.git.yml
+++ b/mod/area/dr_quarters2.git.yml
@@ -212,7 +212,7 @@ Door List:
     Z: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 8
-    AnimationState: {type: :byte, value: 0}
+    AnimationState: {type: :byte, value: 1}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -0.0}
@@ -406,6 +406,7 @@ Door List:
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -0.0}
     CloseLockDC: {type: :byte, value: 0}
+    Comment: {type: :cexostr, value: ""}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 80}
     Description: 
@@ -463,8 +464,110 @@ Door List:
     Z: {type: :float, value: 0.0213}
 Encounter List: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 305}
+        CR: {type: :float, value: 0.5}
+        ResRef: {type: :resref, value: koboldschtze}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: koboldkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: koboldschtze001}
+        SingleSpawn: {type: :byte, value: 1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 303}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: koboldkrieger001}
+        SingleSpawn: {type: :byte, value: 1}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.0225}
+        Y: {type: :float, value: 0.2023}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.0207}
+        Y: {type: :float, value: -3.5498}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 1.1464}
+        Y: {type: :float, value: -3.5292}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 1.1015}
+        Y: {type: :float, value: 0.2023}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Kobolde, normal
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 4}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 24.6145}
+        Y: {type: :float, value: 94.2303}
+        Z: {type: :float, value: -0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 29.5946}
+        Y: {type: :float, value: 60.308}
+        Z: {type: :float, value: -0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 30.8547}
+        Y: {type: :float, value: 91.2695}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: Kobolt_normal}
+    TemplateResRef: {type: :resref, value: kobolt_normal}
+    XPosition: {type: :float, value: 17.9833}
+    YPosition: {type: :float, value: 76.7367}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
