--- a/mod/area/dr_sued05.git.yml
+++ b/mod/area/dr_sued05.git.yml
@@ -20,69 +20,8 @@ Creature List:
 
 Door List: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 8
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 0}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 100}
-    Description: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    DisarmDC: {type: :byte, value: 15}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 16}
-    GenericType_New: {type: :dword, value: 10}
-    HP: {type: :short, value: 100}
-    Hardness: {type: :byte, value: 20}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: key_ilkomplex}
-    KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
-    LoadScreenID: {type: :word, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 5349
-      value: {}
-
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 1}
-    OnClick: {type: :resref, value: door_click}
-    OnClosed: {type: :resref, value: door_closed}
-    OnDamaged: {type: :resref, value: door_damaged}
-    OnDeath: {type: :resref, value: door_death}
-    OnDisarm: {type: :resref, value: door_disarm}
-    OnFailToOpen: {type: :resref, value: door_failtoopen}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: door_lock}
-    OnMeleeAttacked: {type: :resref, value: door_attacked}
-    OnOpen: {type: :resref, value: door_open}
-    OnSpellCastAt: {type: :resref, value: door_spellcast}
-    OnTrapTriggered: {type: :resref, value: door_traptrig}
-    OnUnlock: {type: :resref, value: door_unlock}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 0}
-    Ref: {type: :byte, value: 16}
-    Tag: {type: :cexostr, value: x3_door_oth003}
-    TemplateResRef: {type: :resref, value: x3_door_oth003}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Will: {type: :byte, value: 16}
-    X: {type: :float, value: 79.7369}
-    Y: {type: :float, value: 55.0}
-    Z: {type: :float, value: 0.0629}
 Encounter List: 
   type: :list
   value: []
@@ -142,14 +81,14 @@ TriggerList:
         PointZ: {type: :float, value: 0.0250000599771738}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_drsued03_drsued04}
+    LinkedTo: {type: :cexostr, value: wp_drsued04_drsued05}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14760
       value: 
-        0: drsued04_drsued03
+        0: drsued05_drsued04
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -158,7 +97,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: drsued04_drsued03}
+    Tag: {type: :cexostr, value: drsued05_drsued04}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -184,39 +123,39 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
+        PointX: {type: :float, value: -0.0165672302246094}
+        PointY: {type: :float, value: -0.83152961730957}
+        PointZ: {type: :float, value: 0.0250000599771738}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 13.8216857910156}
+        PointY: {type: :float, value: -0.800793170928955}
+        PointZ: {type: :float, value: 0.0250000599771738}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 13.8055152893066}
+        PointY: {type: :float, value: 0.0617303848266602}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0924415588378906}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.0250000599771738}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.0113105773925781}
-        PointY: {type: :float, value: -0.824150085449219}
-        PointZ: {type: :float, value: 0.0250000599771738}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 13.4697113037109}
-        PointY: {type: :float, value: -0.936325073242188}
-        PointZ: {type: :float, value: 0.025000000372529}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 13.4809494018555}
-        PointY: {type: :float, value: -0.112548828125}
-        PointZ: {type: :float, value: 0.0250000599771738}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.00155258178710938}
-        PointY: {type: :float, value: -0.112548828125}
         PointZ: {type: :float, value: 0.0250000599771738}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_drsued05_drsued04}
+    LinkedTo: {type: :cexostr, value: wp_drsued06_drsued05}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14760
       value: 
-        0: drsued04_drsued05
+        0: drsued05_drsued06
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -225,7 +164,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: drsued04_drsued05}
+    Tag: {type: :cexostr, value: drsued05_drsued06}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -235,9 +174,9 @@ TriggerList:
     TrapType: {type: :byte, value: 0}
     Type: {type: :int, value: 1}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 43.1884}
+    XPosition: {type: :float, value: 43.067}
     YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 1.2717}
+    YPosition: {type: :float, value: 0.9889}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
 WaypointList: 
@@ -256,13 +195,13 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14817
       value: 
-        0: wp_drsued04_drsued03
+        0: wp_drsued05_drsued04
     MapNote: 
       type: :cexolocstr
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_drsued04_drsued03}
+    Tag: {type: :cexostr, value: wp_drsued05_drsued04}
     TemplateResRef: {type: :resref, value: nw_waypoint001}
     XOrientation: {type: :float, value: 0.0245}
     XPosition: {type: :float, value: 49.9328}
@@ -282,16 +221,16 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14817
       value: 
-        0: wp_drsued04_drsued05
+        0: wp_drsued05_drsued06
     MapNote: 
       type: :cexolocstr
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_drsued04_drsued05}
+    Tag: {type: :cexostr, value: wp_drsued05_drsued06}
     TemplateResRef: {type: :resref, value: nw_waypoint001}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 49.7766}
+    XPosition: {type: :float, value: 50.11}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 0.9618}
+    YPosition: {type: :float, value: 0.5801}
     ZPosition: {type: :float, value: -0.0}
